shift bugfix

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,6 +2,8 @@
     width: 100%;
     min-height: 100%;
     position: relative;
+    right: 0;
+    left: 0;
 }
 
 .navBar {
